@@ -284,14 +284,10 @@ a.standalone:hover {
   vertical-align: middle;
   width: 47em;
   font-size: 1em;
-  -moz-border-radius-topleft: 5px;
-  -moz-border-radius-bottomleft: 5px;
-  -moz-border-radius-topright: 5px;
-  -moz-border-radius-bottomright: 5px;
-  -webkit-border-top-left-radius: 5px;
-  -webkit-border-bottom-left-radius: 5px;
-  -webkit-border-top-right-radius: 5px;
-  -webkit-border-bottom-right-radius: 5px;
+  text-align: left;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
 }
 #inner .portalMessage {
   padding: 0.5em 10px 0.5em 30px;
@@ -474,10 +470,7 @@ a.chparent:hover {
 ----------------------------------------------- */
 #site-announcement { 
   float: left;
-  margin-left: 20px;
-  background-color: #D0D2D4;
-  border-color: #000000
-  border: 2px;
+  margin-left: 15px;
 }
 
 /** =LAYOUT STRUCTURE
