@@ -672,12 +672,12 @@
       </ul>
     </div>
 
-    <div metal:define-macro="site-announcement"
+    <metal:announcement define-macro="site-announcement"
          tal:condition="api.site_announcement">
-      <div class="site-announcement" id="site-announcement"
+      <div class="site-announcement portalMessage" id="site-announcement"
            tal:content="structure api.site_announcement">
       </div>
-    </div>
+    </metal:announcement>
 
   </body>
 </html>
